# scry

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-win.yml
assets/icon/: AppIcon.icns
crates/scry_analyze/: Cargo.toml
crates/scry_analyze/src/: codegen.rs  curl.rs  filter.rs  lib.rs  params.rs  summary.rs
crates/scry_app/: Cargo.toml  build.rs
crates/scry_app/src/: authz.rs  capture.rs  cert.rs  chrome.rs  comparer.rs  compose.rs  crawler.rs  dashboard.rs  decoder.rs  ext.rs  graphql.rs  har.rs  highlight.rs  i18n.rs  intercept.rs  intruder.rs  jwt.rs  launcher.rs  logger.rs  main.rs  model.rs  nuclei.rs  oob.rs  proxy.rs  race.rs  repeater.rs  report.rs  rules.rs  scanner.rs  sequencer.rs  session.rs  settings.rs  sitemap.rs  spider.rs  sqli.rs  state.rs  stats.rs  widgets.rs  ws_repeater.rs  xss.rs
crates/scry_ca/: Cargo.toml
crates/scry_ca/src/: lib.rs
crates/scry_codec/: Cargo.toml
crates/scry_codec/src/: lib.rs  protobuf.rs
crates/scry_core/: Cargo.toml
crates/scry_core/src/: lib.rs
crates/scry_crawl/: Cargo.toml
crates/scry_crawl/src/: lib.rs
crates/scry_decode/: Cargo.toml
crates/scry_decode/src/: lib.rs
crates/scry_diff/: Cargo.toml
crates/scry_diff/src/: lib.rs
crates/scry_ext_api/: Cargo.toml
crates/scry_ext_api/src/: lib.rs
crates/scry_ext_host/: Cargo.toml
crates/scry_ext_host/src/: lib.rs  process.rs  wasm.rs  wire.rs
crates/scry_ext_host/tests/: process_roundtrip.rs  wasm_roundtrip.rs
crates/scry_graphql/: Cargo.toml
crates/scry_graphql/src/: lib.rs
crates/scry_httpql/: Cargo.toml
crates/scry_httpql/src/: eval.rs  lib.rs  parse.rs
crates/scry_jwt/: Cargo.toml
crates/scry_jwt/src/: lib.rs
crates/scry_mcp/: Cargo.toml
crates/scry_mcp/src/: main.rs  tools.rs
crates/scry_nuclei/: Cargo.toml
crates/scry_nuclei/src/: builtins.rs  dsl.rs  extractor.rs  lib.rs  matcher.rs  template.rs
crates/scry_nuclei/tests/: e2e_nuclei.rs
crates/scry_oob/: Cargo.toml
crates/scry_oob/src/: lib.rs
crates/scry_proxy/: Cargo.toml
crates/scry_proxy/examples/: authz.rs  crypto.rs  discover.rs  hashext.rs  ja3.rs  quic_sni.rs  req.rs  webscan.rs
crates/scry_proxy/src/: fingerprint.rs  http2.rs  lib.rs  main.rs  mitm.rs  race.rs  replay.rs  smuggle.rs  throttle.rs  tls_profile.rs  upstream.rs  websocket.rs  ws_client.rs
crates/scry_quic/: Cargo.toml
crates/scry_quic/src/: lib.rs
crates/scry_scan/: Cargo.toml
crates/scry_scan/src/: active.rs  authz.rs  discovery.rs  lib.rs  oob.rs  param_miner.rs  passive.rs  types.rs
crates/scry_seq/: Cargo.toml
crates/scry_seq/src/: analyze.rs  fips.rs  lib.rs  types.rs
crates/scry_session/: Cargo.toml
crates/scry_session/src/: capture.rs  detect.rs  lib.rs
crates/scry_session/tests/: e2e_session.rs
crates/scry_sniff/: Cargo.toml
crates/scry_sniff/examples/: emit_pcapng.rs
crates/scry_sniff/src/: lib.rs  pcapng.rs
crates/scry_sqli/: Cargo.toml
crates/scry_sqli/src/: detect.rs  dialect.rs  dump.rs  lib.rs  payloads.rs  points.rs
crates/scry_sqli/tests/: e2e_error_based.rs
crates/scry_storage/: Cargo.toml
crates/scry_storage/src/: lib.rs
crates/scry_xss/: Cargo.toml
crates/scry_xss/src/: context.rs  lib.rs  payloads.rs  points.rs
crates/scry_xss/tests/: e2e_reflected.rs
docs/: 下一步规划.md  会话记忆.md  设计-HTTPQL.md  设计-MCP.md  设计-OOB带外检测.md  设计-Reqable对标补全.md  设计-SQL注入.md  设计-XSS.md  设计-nuclei模板引擎.md  设计-websocket-http2.md  设计-会话处理.md  设计-扩展系统.md  设计-扫描与高级能力.md  设计-抓包方案重构.md  设计-抓包源选择.md  设计-拦截规则.md  设计-渗透能力分析与扫描增强.md  设计-站点爬虫.md  设计-竞品对标与能力缺口.md  设计-竞品缺口清单.md  设计-竞态single-packet.md  设计-解密抓包-与QX共存.md  设计.md  进度.md  需求.md
extensions/py-demo/: main.py  manifest.json
extensions/wasm-demo/: Cargo.toml  README.md  build.sh  manifest.json  wasm_demo.wasm
extensions/wasm-demo/src/: lib.rs
proxifier/: README.md  Scry.ppx
scripts/: build_mac.sh  build_win.ps1  make_icon.py  run_gui.py
singbox/: README.md  scry-capture.json
singbox/gui-for-singbox/: README.md  install.sh  plugin-scry-capture.js  plugin-scry-capture.manifest.yaml
