[package]
name = "scry_oob"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# interactsh 协议:RSA-OAEP(SHA-256)解 aes_key + AES-256-CFB 解每条交互记录(纯 Rust,免 cmake)。
rsa = "0.9"
aes = { workspace = true }
cfb-mode = "0.8"
sha2 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
