[package]
name = "scry_proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scry 抓包内核:HTTP/S TLS 终止式 MITM 代理(对标 Burp / mitmproxy)+ 上游链式回流"

[dependencies]
scry_core = { workspace = true }
scry_storage = { workspace = true }
scry_ca = { workspace = true }
scry_ext_api = { workspace = true }
tokio = { workspace = true }
httparse = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
md-5 = { workspace = true }
sha2 = { workspace = true }
h2 = "0.4.15"
http = "1.4.2"
bytes.workspace = true

[dev-dependencies]
scry_scan = { workspace = true }

[[bin]]
name = "scry_proxy"
path = "src/main.rs"
