[package]
name = "scry_storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Scry 存储层:SQLite 落盘 + 去重(请求先保存铁律)"

[dependencies]
scry_core = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
