[package]
name = "wasm_demo"
version = "0.1.0"
edition = "2021"
publish = false

# 独立 workspace:不并入上层 scry workspace(其 members=["crates/*"] 不含 extensions),
# 也避免污染主仓库的 target/。
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
# 用 serde_json 的 Value 动态读写 flow JSON(纯内存计算,wasm32-unknown-unknown 可编)。
serde_json = "1"

# WASM 产物体积优化(扩展模块越小,加载越快、随包越省)。
[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
panic = "abort"
